# poke

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: configuration.md
src/: TerminalPane.tsx  appConfig.ts  characterThemes.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
