[package]
name = "poke"
version = "0.1.0"
description = "Poke desktop app"
authors = ["Poke"]
edition = "2021"

[lib]
name = "poke_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
